[tool.poetry]
name = "discord-module"
version = "0.1"
description = ""
authors = ["mikoslaf <mikolaj2003wojcik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
dotenv = "^0.9.9"
discord = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
